generated-tests/tests/snapshots/tsx/test_generated_assignment_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
x1 = y1

AST:
(program
  (expression_statement
    (assignment_expression
      left: (identifier "x1")
      right: (identifier "y1")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "x1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 3,
            },
        },
        Usage {
            name: "y1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 8,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
