generated-tests/tests/snapshots/tsx/test_generated_assignment_pattern.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
function test([first = 1, second = 2] = []) { return first + second; }

AST:
(program
  (function_declaration
    (identifier test)
    (formal_parameters
      (required_parameter
        (array_pattern
          (assignment_pattern
            (identifier first)
            (number)
          )
          (assignment_pattern
            (identifier second)
            (number)
          )
        )
        (array)
      )
    )
    (statement_block
      (return_statement
        (binary_expression
          (identifier first)
          (identifier second)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "test",
            ),
        },
        Definition {
            name: "first",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: Some(
                "test",
            ),
        },
        Definition {
            name: "second",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: Some(
                "test",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "test",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 10,
            end_line: 1,
            end_column: 14,
        },
        SerializableUsage {
            name: "first",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 16,
            end_line: 1,
            end_column: 21,
        },
        SerializableUsage {
            name: "second",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 27,
            end_line: 1,
            end_column: 33,
        },
        SerializableUsage {
            name: "first",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 54,
            end_line: 1,
            end_column: 59,
        },
        SerializableUsage {
            name: "second",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 62,
            end_line: 1,
            end_column: 68,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
