generated-tests/tests/snapshots/tsx/test_generated_await_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
await promise

AST:
(program
  (expression_statement
    (await_expression
      (identifier promise)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "promise",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 14,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
